feat: Breeze, rol bazlı yetkilendirme (admin/üye) ve dinamik arayüz kurulumu

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "fakerphp/faker": "^1.23",
         "laravel-lang/lang": "^15.24",
         "laravel-lang/locales": "^2.10",
+        "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.46",
