--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,13 @@ jobs:
         extensions: mbstring, xml, ctype, json, tokenizer, dom, pdo, pdo_mysql
         tools: composer
 
+    # 2.5 Adım: Laravel için gerekli dizinleri oluştur
+    - name: Create necessary Laravel directories
+      run: |
+        mkdir -p bootstrap/cache
+        mkdir -p storage/framework/{sessions,views,cache}
+        mkdir -p storage/logs
+
     # 3. Adım: Composer bağımlılıklarını kur
     - name: Install Composer Dependencies
       run: composer install --no-interaction --no-dev --optimize-autoloader
