--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.3",
         "erusev/parsedown": "^1.7",
         "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^3.11",
